--- a/ExpTrackerApp/package.json
+++ b/ExpTrackerApp/package.json
@@ -14,9 +14,12 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "lottie-react-native": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-date-picker": "^4.1.2",
     "react-native-gesture-handler": "^2.0.0",
+    "react-native-modalbox": "^2.0.2",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.0"
