--- a/ExpTrackerApp/package.json
+++ b/ExpTrackerApp/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "lottie-react-native": "^5.0.1",
     "moment": "^2.29.1",
     "react": "17.0.2",
